Add SoundWall and Pinball links to nav

--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
           <span class="link-text">Landing Page</span>
           <span class="link-arrow">→</span>
         </a>
+        <a href="https://yerrycla.github.io/Soundwall" class="nav-link" target="_blank">
+          <span class="link-icon">&#x1F50A;</span>
+          <span class="link-text">SoundWall</span>
+          <span class="link-arrow">→</span>
+        </a>
+        <a href="https://yerrycla.github.io/Pinball" class="nav-link" target="_blank">
+          <span class="link-icon">&#x1F3AE;</span>
+          <span class="link-text">Pinball</span>
+          <span class="link-arrow">→</span>
+        </a>
         <a href="https://github.com/YerryCLA" class="nav-link" target="_blank">
           <span class="link-icon">&#x1F419;</span>
           <span class="link-text">GitHub</span>
