--- a/index.html
+++ b/index.html
@@ -38,27 +38,42 @@
       <p class="subtitle">Exploring the digital frontier</p>
 
       <div class="big-links">
-        <a href="https://yerrycla.github.io/LandingPage" class="big-link" target="_blank">
-          <div class="big-link-icon">&#x1F3E0;</div>
-          <div class="big-link-label">Landing Page</div>
+        <a href="https://yerry262.github.io/Personal_Website/" class="big-link" target="_blank">
+          <div class="big-link-icon">👤</div>
+          <div class="big-link-label">About Me</div>
           <div class="big-link-arrow">→</div>
         </a>
-        <a href="https://yerrycla.github.io/Soundwall" class="big-link" target="_blank">
-          <div class="big-link-icon">&#x1F50A;</div>
-          <div class="big-link-label">SoundWall</div>
+        <a href="https://yerry262.github.io/Spotify-Webapp-Visualizer/" class="big-link" target="_blank">
+          <div class="big-link-icon">🎵</div>
+          <div class="big-link-label">Spotify Visualizer</div>
           <div class="big-link-arrow">→</div>
         </a>
-        <a href="https://yerrycla.github.io/Pinball" class="big-link" target="_blank">
-          <div class="big-link-icon">&#x1F3AE;</div>
-          <div class="big-link-label">Pinball</div>
+        <a href="https://yerry262.github.io/Tesla-Dashboard/" class="big-link" target="_blank">
+          <div class="big-link-icon">🚗</div>
+          <div class="big-link-label">Tesla Dashboard</div>
           <div class="big-link-arrow">→</div>
         </a>
-        <a href="https://yerrycla.github.io/Skeleton" class="big-link" target="_blank">
-          <div class="big-link-icon">&#x1F9B4;</div>
-          <div class="big-link-label">Skeleton</div>
+        <a href="https://yerry262.github.io/BrickBreaker2500/" class="big-link" target="_blank">
+          <div class="big-link-icon">🧱</div>
+          <div class="big-link-label">Brick Breaker 2500</div>
           <div class="big-link-arrow">→</div>
         </a>
-        <a href="https://github.com/YerryCLA" class="big-link" target="_blank">
+        <a href="https://yerry262.github.io/Connect4/" class="big-link" target="_blank">
+          <div class="big-link-icon">🔴</div>
+          <div class="big-link-label">Connect4</div>
+          <div class="big-link-arrow">→</div>
+        </a>
+        <a href="https://yerry262.github.io/HomeRunDerby/" class="big-link" target="_blank">
+          <div class="big-link-icon">⚾</div>
+          <div class="big-link-label">Home Run Derby</div>
+          <div class="big-link-arrow">→</div>
+        </a>
+        <a href="https://yerry262.github.io/RealEstate/" class="big-link" target="_blank">
+          <div class="big-link-icon">🏠</div>
+          <div class="big-link-label">Real Estate</div>
+          <div class="big-link-arrow">→</div>
+        </a>
+        <a href="https://github.com/yerry262" class="big-link" target="_blank">
           <div class="big-link-icon">
             <svg viewBox="0 0 24 24" width="32" height="32" fill="currentColor">
               <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
