--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@
           <div class="big-link-label">Real Estate</div>
           <div class="big-link-arrow">→</div>
         </a>
+        <a href="https://yerry262.github.io/ChainChat/" class="big-link" target="_blank">
+          <div class="big-link-icon">
+            <svg viewBox="0 0 24 24" width="32" height="32">
+              <path d="M20 2H4C2.9 2 2 2.9 2 4V22L6 18H20C21.1 18 22 17.1 22 16V4C22 2.9 21.1 2 20 2Z" fill="#3B82F6"/>
+              <circle cx="8" cy="10" r="1.5" fill="white"/>
+              <circle cx="12" cy="10" r="1.5" fill="white"/>
+              <circle cx="16" cy="10" r="1.5" fill="white"/>
+            </svg>
+          </div>
+          <div class="big-link-label">ChainChat</div>
+          <div class="big-link-arrow">→</div>
+        </a>
         <a href="https://github.com/yerry262" class="big-link" target="_blank">
           <div class="big-link-icon">
             <svg viewBox="0 0 24 24" width="32" height="32" fill="currentColor">
