--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
       </div>
 
-      <p class="subtitle">Exploring the digital frontier</p>
+      <p class="subtitle">Exploring Live Projects Below</p>
 
       <div class="big-links">
         <a href="https://yerry262.github.io/Personal_Website/" class="big-link" target="_blank">
